# Proyx

./: .gitignore  Cargo.toml  DOCS.md  LICENSE  README.md  STATE_DESIGN.md  TODO.md  full  h2_full_flow.md  proxy-config.toml  proxy.pem  ui_mode_design.md
proxy-backend/: Cargo.toml
proxy-backend/src/: ca.rs  config.rs  default_client.rs  lib.rs  main.rs  proxy_state.rs  state_machine.rs
proxy-ca/: proxy-ca.key  proxy-ca.pem
proyxui/: package-lock.json  package.json
proyxui/src/: App.css  App.tsx
proyxui/src-tauri/: Cargo.toml  tauri.conf.json
proyxui/src-tauri/proxy-ca/: proxy-ca.key  proxy-ca.pem
proyxui/src-tauri/src/: lib.rs  main.rs
proyxui/src/components/: ConnectionStateBadge.tsx  TabBar.tsx
proyxui/src/state/: connection-store.tsx
proyxui/src/tabs/: descriptors.ts
proyxui/src/tabs/LiveInterceptTab/: index.tsx
proyxui/src/tabs/RequestReplayTab/: index.tsx
proyxui/src/tabs/SiteMapTab/: index.tsx
src/: canonical.rs  config.rs  connection.rs  controller.rs  fsm.rs  handlers.rs  intercept.rs  lib.rs  listener.rs  main.rs  scheduling.rs  state_machine.rs  states.rs
src/CA/: helpers.rs  root.der  root.key  root.pem
src/handlers/: detect.rs  h1.rs  h2.rs  h3.rs  intercept.rs  mod.rs  quic.rs  shared.rs  shutdown.rs  stream.rs  tls.rs  transport.rs  upstream.rs
src/protocols/: mod.rs
src/protocols/h2/: client.rs  error.rs  ext.rs  mac.rs  mod.rs  server.rs  share.rs
src/protocols/h2/codec/: error.rs  framed_read.rs  framed_write.rs  mod.rs
src/protocols/h2/frame/: data.rs  go_away.rs  headers.rs  mod.rs  ping.rs  priority.rs  reset.rs  settings.rs  window_update.rs
src/protocols/h2/hpack/: decoder.rs  encoder.rs  header.rs
src/protocols/h2/hpack/huffman/: mod.rs
src/protocols/h2/hpack/test/: fixture.rs  mod.rs
src/protocols/h2/proto/: connection.rs  error.rs  go_away.rs  mod.rs  peer.rs  ping_pong.rs  settings.rs
src/protocols/h2/proto/streams/: flow_control.rs  mod.rs  prioritize.rs  recv.rs  send.rs  state.rs  stream.rs  streams.rs
tests/: proxy_integration.rs
