[package]
name = "Proyx"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
httparse = "1"
bytes = "1"
futures = "0.3.30"
lazy_static = "1.5.0"
once_cell = "1.19.0"
seahash = "4.1.0"
twoway = "0.2.2"
tokio-rustls = "0.26.0"
webpki-roots = "0.26.3"
rcgen = "0.14.5"
openssl = "0.10"
rustls-pki-types = "1"
hpack = "0.3"
