[package]
name = "Proyx"
version = "0.1.0"
edition = "2024"

[dependencies]
httparse = "1"
http = "1"
bytes = "1"
futures = "0.3.30"
lazy_static = "1.5.0"
once_cell = "1.19.0"
seahash = "4.1.0"
twoway = "0.2.2"
tokio-rustls = "0.26.0"
webpki-roots = "0.26.3"
rcgen = "0.14.5"
openssl = "0.10"
rustls-pki-types = "1"
hpack = "0.3"
tokio = { version = "1", features = ["full"] }
atomic-waker = "1.0.0"
fnv = "1.0.5"
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
tracing = { version = "0.1.35", features = ["std"], default-features = false }
tokio-util = {version = "0.7.1", features = [
    "codec",
    "io",
]}
indexmap = { version = "2", features = ["std"] }
slab = "0.4.2"

[dev-dependencies]
env_logger = { version = "0.10", default-features = false }
hex = "0.4.3"
quickcheck = { version = "1.0.3", default-features = false }
rand = "0.8.4"
serde = "1.0.0"
serde_json = "1.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-rustls = "0.26"
walkdir = "2.3.2"

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = ["cfg(fuzzing)"]
